--- a/css/style.css
+++ b/css/style.css
@@ -85,3 +85,15 @@ table th {
     padding: 10px;
     margin-bottom: 15px;
 }
+
+/* Pie de página */
+footer {
+    text-align: center;
+    padding: 10px;
+    background-color: #333;
+    color: white;
+}
+
+.imgJuego{
+    width: 150px;
+}
