--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,15 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
+
+    height: 100vh;
+    display: grid;
+    grid-template-rows: min-content auto min-content;
+}
+
+main {
+    height: 100%;
+    overflow-y: auto;
 }
 
 .container {
@@ -13,7 +22,7 @@ body {
     overflow: hidden;
     padding: 20px;
     background-color: white;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 /* Tablas */
@@ -23,7 +32,8 @@ table {
     margin-top: 20px;
 }
 
-table th, table td {
+table th,
+table td {
     border: 1px solid #ddd;
     padding: 8px;
     text-align: left;
@@ -90,10 +100,10 @@ table th {
 footer {
     text-align: center;
     padding: 10px;
-    background-color: #333;
+    background-color: #995050;
     color: white;
 }
 
-.imgJuego{
+.imgJuego {
     width: 150px;
 }
