--- a/css/style.css
+++ b/css/style.css
@@ -264,14 +264,17 @@ form{
 /* BOTONES */
 .btn {
     display: inline-block;
-    background-color: #855f45;
-    color: white;
+    background-color: rgba(238, 188, 119, 1);
+    color: black;
     padding: 10px 15px;
     text-decoration: none;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     margin-right: 10px;
+}
+.btn:hover {
+    background-color: rgba(239, 155, 73, 1);
 }
 
 .btn-secundario {
